--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "5.2.3",
+    "framer-motion": "^10.16.4",
     "lottie-web": "^5.12.2",
     "node-sass": "^9.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
+    "react-scripts": "^5.0.1",
     "sass": "^1.66.1"
   },
   "devDependencies": {
